Add documentatio to more routes
