# app/Http/Controllers/Admin/StationController.php
@@ -30,7 +30,22 @@ class StationController extends Controller
     }
 
     /**
-     * List all stations from the current user
+     * List all stations
+     *
+     * @OA\Get(
+     *     path="/v1/admin/stations",
+     *     operationId="/v1/admin/stations",
+     *     tags={"Administrators"},
+     *     @OA\Response(
+     *         response="200",
+     *         description="List all stations",
+     *         @OA\JsonContent()
+     *     ),
+     *     @OA\Response(
+     *         response="400",
+     *         description="Error: Bad request. When required parameters were not supplied.",
+     *     ),
+     * )
      *
      * @param Request $request
      * @return JsonResponse
@@ -123,6 +138,28 @@ class StationController extends Controller
 
     /**
      * View a station
+     *
+     * @OA\Get(
+     *     path="/v1/admin/stations/{station}",
+     *     operationId="/v1/admin/stations/000-000-0000",
+     *     tags={"Administrators"},
+     *     @OA\Parameter(
+     *         name="station",
+     *         in="path",
+     *         description="The station identifier",
+     *         required=true,
+     *         @OA\Schema(type="string")
+     *     ),
+     *     @OA\Response(
+     *         response="200",
+     *         description="Returns the station details.",
+     *         @OA\JsonContent()
+     *     ),
+     *     @OA\Response(
+     *         response="404",
+     *         description="Error: Not Found. When station not exists or not public.",
+     *     ),
+     * )
      *
      * @param Request $request
      * @param string $id
